--- a/Template/default/component_meta.html
+++ b/Template/default/component_meta.html
@@ -3,4 +3,5 @@
 <link href="{{qcms:Static}}bootstrap/swiper/swiper.min.css" type="text/css" rel="stylesheet" />
 <link href="{{qcms:Static}}bootstrap/css/morris.css" rel="stylesheet" type="text/css">
 <link href="{{qcms:Static}}bootstrap/css/style-init.css" rel="stylesheet" type="text/css">
+<link href="{{qcms:Static}}bootstrap/css/style-init.css" rel="stylesheet" type="text/css">
 <link href="{{qcms:PathCss}}index.css" rel="stylesheet" type="text/css">
