--- a/Template/default/index_main.html
+++ b/Template/default/index_main.html
@@ -51,7 +51,7 @@
 
                     <div class="h5 text-black py-2 font-weight-bold">新闻动态</div>
                     <div class="bg-white py-2" >
-                        {{list Model='article' Row='5'}}
+                        {{list Model='article' Row='6' IsPage='1'}}
                         <div class="p-4 border-bottom d-md-flex">
 
                             <div class="mb-2 mb-md-1 mr-md-3"><a href="{{qcms:List_Url}}"><img class="d-block indexNewsImg" src="{{qcms:List_Pic}}" ></a></div>
